# spaceporn

./: .envrc  .gitattributes  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  LICENCE.md  LICENSE.md  Makefile  README.md  TODO  TODO.md  amd.supp  build.zig  build.zig.zon  build_machglfw.zig  circlefbm.glsl  clouds.glsl  configure.ac  createPNG.c  curly_clouds_tofix.glsl  dw.glsl  lightning.glsl  log  newcraters.glsl  preprocess.glsl  rand.glsl  ring.glsl  test.sh
.github/workflows/: build.yml  pong.yml
bash/: autoconf.sh  covcheck.sh  gensupp.sh  memcheck.sh
c/include/: build.h  context.h  context_glfw.h  context_vulkan.h  extensions.h  helpers.h  log.h  macros.h  main.h  prefixed_macros.h
c/src/: context.c  context_glfw.c  context_vulkan.c  extensions.c  log.c  main.c
cli/: CONTRIBUTING.md  Makefile  README.md  TODO.md
cli/conf/: configure.ac
cli/include/: atlas.h  context.h  options.h  parser.h  path.h  uniform.h  vertex.h
cli/scripts/dev/: autoconf  colors256  configure  generate-suppressions  monitoring
cli/scripts/make/: erroneous_shader  init  install
cli/shaders/fragment/: common.glsl  main.glsl
cli/shaders/fragment/planets/: common.glsl  ring.glsl
cli/shaders/fragment/space/: common.glsl
cli/shaders/lab/: generic_galaxy.glsl
cli/shaders/vertex/: main.glsl
cli/src/: options.c  parser.c  precompute.c  shader.c  spaceporn.c  texture.c  uniform.c
conf/: config.h.in  configure  configure.ac
doc/: CONTRIBUTING.md  README.md
doc/starfield/: 0_setup.md  1_1_a_circled_light.md  1_2_circles_grid.md  1_3_rd_circles_grid.md  1_4_noise_circles_grid.md  1_4_param_circles_grid.md  1_5_shape_circles_grid.md  2_1_a_swirl.md  2_1_check_pattern.md  2_2_a_swirl.md  2_2_swirls_grid.md  2_3_rd_swirls_grid.md  2_3_swirls_grid.md  3_1_a_cross.md  3_2_crosses_grid.md  3_3_rd_crossed_grid.md  3_4_star_types.md  4_details.md  README.md  bufferA.glsl  part1.glsl  part2.glsl  part3.glsl  part4.glsl  shadertoy.glsl  table_of_contents.md  tmp.glsl
examples/: renderheadless.cpp
hooks/: commit-msg
howto/: starfield.md
howto/starfield/: 0_before_starting.md  0_setup.md  1_1_a_circled_light.md  1_2_circles_grid.md  1_nebula.md  shadertoy.glsl  starfield.md  table_of_contents.md
include/: atlas.h  config.h  context.h  options.h  parser.h  path.h  pngtexture.h  precompute.h  shader.h  spaceporn.h  texture.h  uniform.h  util.h  vertex.h  xshader.h  xteleskop.h  xtelesktop.h
libs/: gen_binding.sh
new/: main.zig
old/main/: README.md
scripts/: covcheck.sh  detectmissingconf.sh  gensupp.sh  memcheck.sh  missingconf.sh
scripts/dev/: autoconf  build-glfw  configure  configure.sh  covcheck.sh  coverage-check  detect-missing-AC_CHECK  detectmissingconf.sh  generate-suppressions.sh  gensupp.sh  memory-check  monitoring  parsesupp.sh
scripts/make/: clean  clean.sh  init  init.sh
sh/: autoconf.sh  configure.sh  covcheck.sh  memcheck.sh
shaderc#1408/: test.frag
shaders/: fragment.glsl  main.frag  main.vert  offscreen.frag  toy.glsl  uncompiling_fragment.glsl  uncompiling_vertex.glsl
shaders/fragment/: atlas.glsl  bigstars.glsl  bigstars.glsl.new  bigstars.glsl.old  bufferA.glsl  common.glsl  compute.glsl  coords.glsl  dust.glsl  hash.glsl  header.glsl  main.glsl  nebula.glsl  nebulae.glsl  noiseanimation.glsl  pixelplanets.glsl  pixelspace.glsl  planets.glsl  stars.glsl
shaders/fragment/planet/: dry.glsl  gaz.glsl  land.glsl  moon.glsl  ring.glsl
shaders/fragment/planets/: common.glsl  dry.glsl  gaz.glsl  land.glsl  main.glsl  moon.glsl  ring.glsl
shaders/fragment/space/: common.glsl  dust.glsl  main.glsl  nebula.glsl  stars.glsl
shaders/fragment/space/bigstars/: common.glsl  diamond.glsl  main.glsl  nova.glsl  polar.glsl
shaders/fragment/star/: diamond.glsl  nova.glsl  polar.glsl
shaders/lab/: bufferB.glsl  clouds.glsl  cloudy_planet.glsl  cloudy_planet_bufferA.glsl  cloudy_planet_main.glsl  curly.glsl  dry.glsl  shadertoy.glsl  starfield.glsl  swirl.glsl  text.glsl
shaders/test/: blabla.frag
shaders/test/std/: add.frag
shaders/vertex/: main.glsl
shadertoy/: bufferA.glsl  nebulacloud_part2.glsl  part3.glsl  part4.glsl
src/: atlas.c  config.c  context.c  context.zig  context_glfw.zig  context_vk.zig  context_vulkan.zig  datetime.zig  debug_init_vk.zig  log.zig  logger.zig  main.zig  options.c  options.zig  parser.c  path.c  pngtexture.c  shader.c  spaceporn.c  tests.zig  texture.c  turbo_init_vk.zig  uniform.c  util.c  utils.zig  vertex.c  xshader.c  xteleskop.c  xtelesktop.c
src/binding/: glfw.zig  imgui.zig  import.zig  raw.zig  vk.zig  vulkan.zig
src/binding/glfw/: context.zig  error.zig  glfw.zig  main.zig  vk.zig  vulkan.zig  window.zig
src/binding/imgui/: glfw.zig  imgui.zig  vk.zig
src/binding/vk/: attachment.zig  buffer.zig  command.zig  descriptor.zig  device.zig  ext.zig  format.zig  framebuffer.zig  image.zig  instance.zig  khr.zig  memory.zig  physical_device.zig  pipeline.zig  prototypes.zig  raw.zig  render_pass.zig  sampler.zig  shader.zig  sync.zig  vk.zig
src/binding/vk/ext/: debug_utils.zig
src/binding/vk/khr/: physical_device.zig  surface.zig  swapchain.zig
src/compiler/: main.zig
src/compiler/bindings/: raw.zig
src/compiler/bindings/shaderc/: shaderc.zig
src/glfw/: context.zig
src/imgui/: context.zig
src/spaceporn/: context.zig  logger.zig  main.zig  options.zig
src/spaceporn/bindings/: raw.zig
src/spaceporn/bindings/glfw/: window.zig
src/spaceporn/bindings/imgui/: glfw.zig  style.zig
src/spaceporn/vk/: context.zig  vertex.zig
src/vk/: context.zig  dispatch.zig  init_debug.zig  init_turbo.zig  instance_debug.zig  instance_turbo.zig  vertex.zig
src/vk/instance/: default.zig  turbo.zig
test/: main.zig  runner.zig  sample.zig  todo.zig
wiki/: CONTRIBUTING.md  Circled-light.md  Circles-grid.md  Cloud-shape.md  Home.md  Nebula.md  Parametrize-circles-grid.md  README.md  Random.md  Randomize-circles-grid.md  Randomize-swirls-grid.md  Setup.md  Swirl.md  Swirls-grid.md  Triangles-texture.md  starfield.md
wiki/shadertoy/: nebulacloud_part1.glsl
(+16 files in other folders)
